--- a/spacy_test.ipynb
+++ b/spacy_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,18 @@
     "import string\n",
     "from wordcloud import WordCloud\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spacy & en_core_web_sm is language processor\n",
+    "# goose3 is article extractor\n",
+    "# nltk tokenizer tool\n",
+    "# wordcloud"
    ]
   },
   {
